--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -56,6 +56,8 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
 .topnav a.active {
@@ -66,6 +68,8 @@ img {
 
 .topnav .icon {
   display: none;
+  color: #ff0000;
+  font-size: 1.5em;
 }
 
 @media screen and (max-width: 768px) {
@@ -462,6 +466,7 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
