--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -553,3 +553,13 @@ footer {
   }
 }
 
+@keyframes modalclose {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    transform: translateY(-150px);
+  }
+}
+
