issue #2 solved : validation for each input to submit

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -357,6 +357,7 @@ input {
   color: #fff;
   cursor: pointer;
   border: 0;
+  transition-duration: 0.3s;
 }
 /* custom select styles */
 .custom-select {
