--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -15,7 +15,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -229,6 +228,7 @@ input {
   border-radius: 8px;
   font-size: 20px;
   height: 48px;
+  border: 2px solid transparent;
 }
 
 .formData[data-error]::after {
