--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -30,10 +30,6 @@ img {
   padding-right: 1rem;
 }
 
-.hidden{
-  display: none;
-}
-
 /* HEADER */
 
 .topnav {
@@ -194,17 +190,18 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
-.afterSubmit{
+.confirmation-container{
   width: 100%;
   height: 800px;
   font-size: 1.5em;
+  opacity: 0;
   display: none;
   justify-content: center;
   align-items:  center;
   text-align: center;
 }
 
-.btn-signup--after{
+.confirmation-btn{
   position: absolute;
   bottom: 18px;
 }
@@ -583,3 +580,22 @@ footer {
   }
 }
 
+@keyframes formhidden {
+  from{
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0
+  }
+}
+
+@keyframes confirmationanim{
+  from{
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1
+  }
+}
