--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -58,6 +58,7 @@ img {
   text-decoration: none;
   font-size: 20px;
   font-family: Roboto, sans-serif;
+  font-weight: 500;
 }
 
 .topnav a:hover {
